--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.19.0",
     "core-js": "^2.6.5",
     "es6-promise": "^4.2.8",
+    "npm": "^6.10.2",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
     "vuex": "^3.1.1"
